--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-fixed-jsdom": "^0.0.10",
     "vite": "^7.0.4"
   }
 }
