chore: 🔧 update test inclusions to include .jsx files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=alex1dregirard
 
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=**/*.test.js,**/*.spec.js
+sonar.test.inclusions=**/*.test.js,**/*.spec.js,**/*.test.jsx,**/*.spec.jsx
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.coverage.exclusions=**/*.test.js
