--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
+# SonarCloud configuration file
+
+# Project identification
 sonar.projectKey=alex1dregirard_marvel-app-complete
 sonar.organization=alex1dregirard
 
@@ -7,3 +10,8 @@ sonar.test.inclusions=**/*.test.js,**/*.spec.js,**/*.test.jsx,**/*.spec.jsx
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.coverage.exclusions=**/*.test.js,src/routes.js,src/main.jsx,src/App.jsx
+
+# exclude javascript:S6774 
+sonar.issue.ignore.multicriteria=e1
+sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S6774
+sonar.issue.ignore.multicriteria.e1.resourceKey=*
